# morphic_tui

./: .gitignore  Cargo.toml  README.md
migrations/: 01_auth.sql  02_biz.sql  03_task.sql  04_notify.sql  05_quality.sql  06_acceptance.sql  07_assets.sql
src/: app.rs  config.rs  database.rs  framework.rs  main.rs
src/apps/: info.rs  mod.rs  monitor.rs  quality.rs  settings.rs
src/components/: header.rs  mod.rs  sidebar.rs
src/models/: acceptance.rs  assets.rs  auth.rs  biz.rs  mod.rs  notify.rs  quality.rs  task.rs
src/repositories/: mod.rs  quality_repo.rs
