[package]
name = "morphic_tui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
confy = "2.0.0"
crossterm = "0.29.0"
mac_address = "1.1.8"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
sysinfo = "0.38.4"
tokio = { version = "1.51.0", features = ["full"] }
toml = "1.1.2"
