[package]
name = "morphic_tui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
confy = "2.0.0"
crossterm = "0.29.0"
mac_address = "1.1.8"
ratatui = "0.30.0"
rust_decimal = "1.41.0"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "macros", "chrono", "json"] }
sysinfo = "0.38.4"
tokio = { version = "1.51.0", features = ["full"] }
toml = "1.1.2"
uuid = "1.23.0"
